# vulkant

./: .clang-format  .gitignore  CMakeLists.txt  compile.bat
src/: CMakeLists.txt  main.cpp  triangle.cpp
src/headers/: triangle.h
src/shaders/: shader.vert
